edited about page

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Networks</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <p>Network Design, Security, Routing and Switching, Troubleshooting, Wifi Site Surveys.</p>
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -28,7 +28,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">App Dev</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <p>Custom application development on Windows, Linux, IOS and Android.</p>
                     </div><!--//content-->
                 </div><!--//item-->           
                 <div class="clearfix visible-md"></div>    
@@ -38,7 +38,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Integration</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <p>Integrate your devices and technologies into a unified system.</p>
                     </div><!--//content-->
                 </div><!--//item-->                
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -47,7 +47,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Consulting</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <p>Ad hoc consulting and system support.</p>
                     </div><!--//content-->
                 </div><!--//item-->
                 <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -56,7 +56,7 @@
                     </div>
                     <div class="content">
                         <h3 class="sub-title">Monitoring</h3>
-                        <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ <a href="http://fortawesome.github.io/Font-Awesome/icons/" target="_blank">FontAwesome</a> icons available.</p>
+                        <p>Network and system monitoring and reporting.</p>
                     </div><!--//content-->
                 </div><!--//item-->               
             </div><!--//row-->            
