--- a/_includes/promo.html
+++ b/_includes/promo.html
@@ -1,8 +1,8 @@
     <!-- ******PROMO****** -->
     <section id="promo" class="promo section offset-header">
         <div class="container text-center">
-            <h2 class="title">Alpharez<span class="highlight">Consulting</span></h2>
-            <p class="intro">Networking, Integration, Automation, & Development</p>
+            <h2 class="title">Alpharez</h2>
+            <p class="intro">Transform your network infrastructure with AI-driven automation solutions</p>
             
             
         </div><!--//container-->
