--- a/_includes/features.html
+++ b/_includes/features.html
@@ -1,15 +1,15 @@
     <!-- ******FEATURES****** --> 
     <section id="features" class="features section">
         <div class="container text-center">
-            <h2 class="title">Features</h2>
+            <h2 class="title">Why Choose Alpharez?</h2>
             <ul class="feature-list list-unstyled">
-                <li><i class="fa fa-check"></i> Fully responsive</li>
-                <li><i class="fa fa-check"></i> HTML5 + CSS3</li>
-                <li><i class="fa fa-check"></i> Built on <a href="http://getbootstrap.com/" target="_blank">Bootstrap 3.3</a></li>
-                <li><i class="fa fa-check"></i> 400+ FontAwesome icons</li>
-                <li><i class="fa fa-check"></i> 4 colour schemes</li>
-                <li><i class="fa fa-check"></i> LESS files included</li>
-                <li><i class="fa fa-check"></i> Compatible with all modern browsers</li>
+                <li><i class="fa fa-check"></i> 90% reduction in deployment time</li>
+                <li><i class="fa fa-check"></i> AI-powered network validation</li>
+                <li><i class="fa fa-check"></i> Predictive analytics & anomaly detection</li>
+                <li><i class="fa fa-check"></i> Scales from small to enterprise networks</li>
+                <li><i class="fa fa-check"></i> Real-time monitoring & optimization</li>
+                <li><i class="fa fa-check"></i> Automated configuration management</li>
+                <li><i class="fa fa-check"></i> Zero-outage transformation</li>
             </ul>
         </div><!--//container-->
     </section><!--//features-->
