--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,16 +5,13 @@
                 <h2 class="title  text-center">Ready to Transform Your Network?</h2>
                 <p class="intro  text-center">Schedule a consultation to explore how AI-driven automation can optimize your network infrastructure.</p>
                 <div class="author-message">
-                    <div class="profile">
-                      <img class="img-responsive" src="{{ site.baseurl }}public/images/profile.png" alt="" />
-                    </div><!--//profile-->
                     <div class="speech-bubble">
                         <h3 class="sub-title">Ready to get started?</h3>
                         <p>Whether you're looking to modernize your existing network or build a new AI-powered infrastructure, we're here to help.</p>
                         <p>Our team combines deep network engineering expertise with cutting-edge AI technology to deliver solutions that scale with your business.</p>
                         <p><strong>Schedule a consultation</strong> to discuss your specific network challenges and discover how we can transform your infrastructure.</p>
                         <div class="source">
-                            <span class="name"><a href="mailto:{{ site.email }}">Steve Clement</a></span>
+                            <span class="name"><a href="mailto:info@alpharez.com">Steve Clement</a></span>
                             <br />
                             <span class="title">Network Engineering & AI Automation</span>
                         </div><!--//source-->
@@ -24,12 +21,9 @@
                 <div class="info text-center">
                     <h4 class="sub-title">Get Connected</h4>
                     <ul class="social-icons list-inline">
-                        <li><a href="https://twitter.com/{{ site.twitter_username }}" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="https://www.facebook.com/{{ site.facebook }}" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="http://instagram.com/{{ site.instagram_username }}"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="https://dribbble.com/{{ site.dribbble_username }}"><i class="fa fa-dribbble"></i></a></li>
-                        <li class="last"><a href="mailto: {{ site.email }}"><i class="fa fa-envelope"></i></a></li>
+                        <li><a href="https://alpharez.com" target="_blank"><i class="fa fa-globe"></i></a></li>
+                        <li><a href="https://github.com/alpharez" target="_blank"><i class="fa fa-github"></i></a></li>
+                        <li class="last"><a href="mailto:info@alpharez.com"><i class="fa fa-envelope"></i></a></li>
                     </ul>
                 </div><!--//info-->
             </div><!--//contact-inner-->
